--- a/.github/workflows/scorecards.yml
+++ b/.github/workflows/scorecards.yml
@@ -1,11 +1,7 @@
 name: Scorecards supply-chain security
 on:
-  # Only the default branch is supported.
-  branch_protection_rule:
-  schedule:
-    - cron: '17 3 * * 1'
   push:
-    branches: [ main ]
+    branches: [ xxx ]
 
 # Declare default permissions as read only.
 permissions: read-all
