this pr will be closed

--- a/.github/workflows/docs-preview-cleanup.yml
+++ b/.github/workflows/docs-preview-cleanup.yml
@@ -7,6 +7,8 @@ on:
   # This always uses the workflow file from the main branch
   pull_request_target:
     types: [closed]
+    
+# yes
 
 jobs:
   cleanup:
